[project]
name = "lambda-cloud-toolkit"
version = "0.1.0"
description = "Lambda Cloud GPU instance management and vLLM deployment toolkit"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
lambda-gpu = "lambda_cloud_toolkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_cloud_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests requiring a running Lambda Cloud instance",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
